# app_immo_sci_vs_perso

./: README.md  docker-compose.yaml  main.py  pyproject.toml
.streamlit/: config.toml
src/app/: app.py  config.py
src/app/GUI/: footer.py  home.py  sidebar.py
src/app/calculations/: from_dividend_to_CA.py  impot_societe_from_CA.py  investment_options.py
src/app/utils/: data_visualization.py
